Implement turn order

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,16 @@
 TODO
 
-Implement multiplayer gameplay with macro game rules
-    Turn order
-    Discard piles
+Implement further game rules
     Meld control (40 points for first meld)
     Layoffs (discard to table meld)
     Joker swapping
     Game end scoring
+
+4 Sep 2022
+Implement multiplayer gameplay with macro game rules
+    Turn order
+    Melding
+    Discard pile
 
 3 Sep 2022
 
