--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,6 @@ TODO
 Implement further game rules
     Layoffs (discard to table meld)
     Joker swapping
-    Rules for when you have 1-2 cards at hand
 
 Create online multiplayer platform
     Add polling for prepared lobby (i.e. refresh for ready state changes and start game)
@@ -13,11 +12,13 @@ Polishing
     Better display for turn list on game end
     Kinder error messages for failed actions (message queue?)
     Distinguish 6 and 9 (dash on bottom?)
+    Disable action buttons when it's not your turn
 
 10 Sep 2022
 
 Implement polling and action inputs for all supported ones
 Decided on polling as the necessary state changes are not heavy and it shouldn't bring a heavy load on the server to continue over HTTP (or HTTP/3)
+Skip turn on pickup with 1 card at hand
 
 7 Sep 2022
 
