Tag started and finished lobbies

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,6 @@ Implement further game rules
     Joker swapping
 
 Polishing
-    Hide finished lobbies
     Better display for turn list on game end
     Kinder error messages for failed actions (message queue?)
 
@@ -18,6 +17,7 @@ Disable action buttons when it's not your turn
 Fix game not ending on discarding last card
 Distinguish 6 and 9 by removing rotations but instead translating
 Add polling for lobby in prepared state to update joins, leaves, and readies
+Tag started and finished lobbies
 
 7 Sep 2022
 
