--- a/TODO.txt
+++ b/TODO.txt
@@ -2,11 +2,13 @@ TODO
 
 Polishing
     Better display for turn list on game end
-    Display valid actions only in UI
 
 15 Sep 2022
+
 Refactor actions to use card IDs instead of indices
 Implement joker swapping and lay-offs and test in games
+Display valid actions only in UI
+Adjustments for mobile UI layout
 
 11 Sep 2022
 
